--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cypress run"
+    "test": "cypress run",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@cypress/react": "^9.0.1",
+    "@eslint/js": "^9.34.0",
     "@vitejs/plugin-react": "^5.0.1",
     "cypress": "^15.0.0",
+    "eslint": "^9.34.0",
+    "eslint-plugin-cypress": "^5.1.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "vite": "^7.1.3"
