--- a/.github/workflows/cypress-job.yml
+++ b/.github/workflows/cypress-job.yml
@@ -28,3 +28,12 @@ jobs:
 
       - name: Run Cypress tests
         run: npx cypress run
+
+      - name: Upload Cypress artifacts
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: cypress-results
+          path: |
+            cypress/screenshots
+            cypress/videos
