--- a/.github/workflows/lint-job.yml
+++ b/.github/workflows/lint-job.yml
@@ -1,9 +1,9 @@
-name: ESLint Check
+name: Lint
 
 on: workflow_call
 
 jobs:
-  eslint:
+  lint:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,5 +26,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run ESLint
-        run: npx eslint . --ext .js,.jsx,.ts,.tsx --max-warnings 0
+      - name: Run ESLint (fail on warnings)
+        run: npm run lint -- --max-warnings=0
