--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "@eslint/js": "^9.34.0",
     "@vitejs/plugin-react": "^5.0.1",
     "cypress": "^15.0.0",
+    "cypress-mochawesome-reporter": "^4.0.2",
+    "cypress-xpath": "^2.0.1",
     "eslint": "^9.34.0",
     "eslint-plugin-cypress": "^5.1.1",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.3.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^5.0.0",
+    "mochawesome-report-generator": "^6.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "vite": "^7.1.3"
